--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <span class="filling-spacer"></span>
     <button mat-button routerLink="/shoppingcart" ariaCurrentWhenActive="page">Shopping Cart</button>
     <button mat-button [matMenuTriggerFor]="menu">Username<mat-icon aria-hidden="false">arrow_drop_down</mat-icon></button>
-    <mat-menu #menu="matMenu">
+    <mat-menu #menu>
       <button mat-menu-item routerLink="/orders">My Orders</button>
       <button mat-menu-item routerLink="/manage-orders">Manage Orders</button>
       <button mat-menu-item routerLink="/manage-products">Manage Products</button>
