Footer and styling

--- a/src/app/shared/forbidden/forbidden.component.html
+++ b/src/app/shared/forbidden/forbidden.component.html
@@ -1,5 +1,6 @@
-<div>
-  <h1>403 Error</h1>
-  <h1>Forbidden</h1>
+<div class="mat-typography">
+  <h1 class="mat-headline">Access forbidden</h1>
+  <div class="mat-body-strong">
+    The intended page is not accessable using the current credentials.
+  </div>
 </div>
-
