--- a/src/app/shared/pagenotfound/pagenotfound.component.html
+++ b/src/app/shared/pagenotfound/pagenotfound.component.html
@@ -1,4 +1,7 @@
-<div>
-  <h1>404 Error</h1>
-  <h1>Page Not Found</h1>
+<div class="mat-typography">
+  <h1 class="mat-headline">Page not found</h1>
+  <div class="mat-body-strong">
+    There is no content at this path.
+    <a routerLink="/">Home</a>
+  </div>
 </div>
