Product list and product page

--- a/src/app/pages/admin/admin-products/admin-products.component.sass
+++ b/src/app/pages/admin/admin-products/admin-products.component.sass
@@ -1,8 +1,17 @@
-.product-form
-  min-width: 150px
-  max-width: 500px
+table
   width: 100%
 
-.product-field
-  width: 100%
+.mat-column-action
+  flex: 0 0 50px
 
+.mat-form-field
+  font-size: 14px
+
+.app-no-data-row
+  display: flex
+  align-items: center
+  box-sizing: border-box
+  min-height: 48px
+
+.app-no-data-cell
+  padding-left: 24px
