--- a/src/app/pages/admin/admin-products/admin-products.component.html
+++ b/src/app/pages/admin/admin-products/admin-products.component.html
@@ -1,53 +1,77 @@
-<h1>Administer Products</h1>
-<form [formGroup]="form" class="product-form">
-  <p>
-    <mat-form-field appearance="fill" class="product-field">
-      <mat-label>Product name</mat-label>
-      <input matInput type="text" [formControl]="nameControl" name="name" />
-      <mat-error *ngIf="nameControl.hasError('required')">
-        Product name is required
-      </mat-error>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="fill" class="product-field">
-      <mat-label>Price</mat-label>
-      <span matSuffix>€ &nbsp;</span>
-      <input matInput type="number" [formControl]="priceControl" name="price" />
-      <mat-error *ngIf="priceControl.hasError('required')">
-        Price is required
-      </mat-error>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="fill" class="product-field">
-      <mat-label>Food Category</mat-label>
-      <mat-select [formControl]="categoryControl" name="category">
-        <mat-option
-          *ngFor="let category of categories | async"
-          [value]="category.id"
+<h1>Manage Products</h1>
+
+<div class="mat-elevation-z8">
+  <mat-table [dataSource]="dataSource" matSort>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        Name
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.name }} </mat-cell>
+    </ng-container>
+
+    <!-- Category Column -->
+    <ng-container matColumnDef="category">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        Category
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ getCategoryName(row.category) }} </mat-cell>
+    </ng-container>
+
+    <!-- Fruit Column -->
+    <ng-container matColumnDef="price">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        Price
+      </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.price | currency }} </mat-cell>
+    </ng-container>
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <button
+          mat-button
+          color="accent"
+          [routerLink]="['/admin/product', row.id]"
         >
-          {{ category.name }}
-        </mat-option>
-      </mat-select>
-      <mat-error *ngIf="categoryControl.hasError('required')">
-        Category is required
-      </mat-error>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="fill" class="product-field">
-      <mat-label>Product image URL</mat-label>
-      <input matInput type="url" [formControl]="imageControl" name="imageUrl" />
-      <mat-error *ngIf="imageControl.invalid">
-        Invalid URL
-      </mat-error>
-    </mat-form-field>
-    <mat-card>
-      <img *ngIf="imageControl.valid" class="product-field product-image" [src]="imageControl.value"/>
-    </mat-card>
-  </p>
-  <p>
-    <button mat-flat-button color="primary" (click)="saveProduct()" [disabled]="form.invalid">Save Product</button>
-  </p>
-</form>
+          Edit
+        </button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+    <!-- Row shown when there is no matching data. -->
+    <div class="mat-row app-no-data-row" *matNoDataRow>
+      <div class="mat-cell app-no-data-cell">
+        No data matching the filter "{{ input.value }}"
+      </div>
+    </div>
+  </mat-table>
+
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    aria-label="Select page of users"
+  ></mat-paginator>
+</div>
+
+<mat-toolbar>
+  <mat-form-field appearance="standard">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" #input />
+  </mat-form-field>
+  <span class="filling-spacer"></span>
+  <button
+    mat-flat-button
+    color="primary"
+    matTooltip="Add new product"
+    matTooltipShowDelay="1000"
+    matTooltipPosition="above"
+    [routerLink]="['/admin', 'product', 'new']"
+  >
+    <mat-icon>add_item</mat-icon>
+    Add Product
+  </button>
+</mat-toolbar>
