Product handling works
* Also refactored to reduce the amount of submits.

--- a/src/app/pages/admin/admin-product/admin-product.component.sass
+++ b/src/app/pages/admin/admin-product/admin-product.component.sass
@@ -8,6 +8,9 @@
 .button-bar
   display: flex
 
-.button-bar .mat-button-base
-  margin: 8px 8px 8px 0
+.mat-toolbar .mat-button-base
+  margin-left: 16px
+
+.mat-toolbar .mat-button-base:first-of-type
+  margin-left: 0px
 
