--- a/src/app/pages/admin/admin-product/admin-product.component.html
+++ b/src/app/pages/admin/admin-product/admin-product.component.html
@@ -1,4 +1,3 @@
-
 <h1 *ngIf="id == 'new'; else editProduct">New Product</h1>
 <ng-template #editProduct>
   <h1 class="mat-headline">Edit Product</h1>
@@ -43,7 +42,7 @@
         <mat-label>Food Category</mat-label>
         <mat-select [formControl]="categoryControl" name="category">
           <mat-option
-            *ngFor="let category of categories$ | async"
+            *ngFor="let category of getCategories$() | async"
             [value]="category.id"
           >
             {{ category.name }}
@@ -77,8 +76,24 @@
       <mat-icon>save</mat-icon>
       Save
     </button>
+    <button
+      mat-flat-button
+      color="accent"
+      type="button"
+      [routerLink]="['/admin/products']"
+    >
+      <mat-icon>cancel</mat-icon>
+      Cancel
+    </button>
     <span class="filling-spacer"></span>
-    <button mat-flat-button color="warn" type="button" [disabled]="isNew()"><mat-icon>delete</mat-icon>
-      Delete</button>
+    <button
+      mat-flat-button
+      color="warn"
+      type="button"
+      [disabled]="isNew()"
+      (click)="onDelete()"
+    >
+      <mat-icon>delete</mat-icon> Delete
+    </button>
   </mat-toolbar>
 </form>
