--- a/src/app/pages/admin/admin-product/admin-product.component.html
+++ b/src/app/pages/admin/admin-product/admin-product.component.html
@@ -42,7 +42,7 @@
         <mat-label>Food Category</mat-label>
         <mat-select [formControl]="categoryControl" name="category">
           <mat-option
-            *ngFor="let category of getCategories$() | async"
+            *ngFor="let category of getCategories()"
             [value]="category.id"
           >
             {{ category.name }}
