Added confirmation dialog

--- a/src/app/pages/admin/admin-product/admin-product.component.html
+++ b/src/app/pages/admin/admin-product/admin-product.component.html
@@ -91,7 +91,7 @@
       color="warn"
       type="button"
       [disabled]="isNew()"
-      (click)="onDelete()"
+      (click)="onConfirmDelete()"
     >
       <mat-icon>delete</mat-icon> Delete
     </button>
