Restyling for transparent toolbar with buttons

--- a/src/app/app-components/product-card/product-card.component.sass
+++ b/src/app/app-components/product-card/product-card.component.sass
@@ -1,12 +1,10 @@
 .app-product-card
-  max-width: 320px
-  min-width: 120px
-  min-height: 120px
-  max-height: 480px
+  width: 320px
+  height: 320px
   overflow: auto
 
 .product-image
-  max-height: 240px
+  height: 220px
 
 .product-price
   display: flex
