--- a/src/app/pages/admin/admin-product/admin-product.component.sass
+++ b/src/app/pages/admin/admin-product/admin-product.component.sass
@@ -1,16 +1,9 @@
+@use '../../../styles/app-toolbar'
+
 .product-form
   min-width: 300px
   width: 100%
 
 .product-field
   width: 100%
-
-.button-bar
-  display: flex
-
-.mat-toolbar .mat-button-base
-  margin-left: 16px
-
-.mat-toolbar .mat-button-base:first-of-type
-  margin-left: 0px
 
