--- a/src/app/pages/admin/admin-products/admin-products.component.html
+++ b/src/app/pages/admin/admin-products/admin-products.component.html
@@ -1,6 +1,6 @@
 <h1>Manage Products</h1>
 
-<mat-toolbar>
+<mat-toolbar class="transparent">
   <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" #input />
