--- a/src/app/app-components/product-card/product-card.component.sass
+++ b/src/app/app-components/product-card/product-card.component.sass
@@ -1,10 +1,10 @@
 .app-product-card
-  width: 320px
-  height: 320px
+  max-width: 320px
+  max-height: 320px
   overflow: auto
 
 .product-image
-  height: 220px
+  max-height: 220px
 
 .product-price
   display: flex
