--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body
+  height: 100%
+
 body
   margin: 0
-  padding: 0
+  // font-family: Roboto, "Helvetica Neue", sans-serif
+
+.app-link
+  padding: 0 !important
+  line-height: inherit !important
+
+.app-link:hover
+  text-decoration: underline
+
+.filling-spacer
+  flex: 1 1 auto
+
+.transparent
+  background-color: transparent
 
