--- a/src/app/app-components/product-card/product-card.component.sass
+++ b/src/app/app-components/product-card/product-card.component.sass
@@ -1,11 +1,17 @@
 .app-product-card
-  max-width: 320px
-  max-height: 320px
-  overflow: auto
+  width: 320px
+  height: 320px
+  overflow: hidden
 
 .product-image
-  max-height: 220px
+  height: 210px
 
 .product-price
-  display: flex
+  justify-content: left
+  align-self: center
+
+.product-button
   justify-content: right
+
+.button-bar
+  display: flex
