--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -34,6 +34,8 @@
             [price]="product.price"
             [category]="product.category"
             [imageUrl]="product.imageUrl"
+            [id]="product.id"
+            idButtonLabel="Buy"
           ></app-product-card>
         </mat-grid-tile>
       </mat-grid-list>
