--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -17,9 +17,7 @@
           [price]="product.price"
           [category]="product.category"
           [imageUrl]="product.imageUrl"
-          [id]="product.id"
-          idButtonLabel="Add to Cart"
-          fxFlexAlign="center"
+          [productId]="product.id"
         ></app-product-card>
       </div>
     </div>
