Refactoring reactive shopping cart

--- a/src/app/app-components/toolbar/toolbar.component.html
+++ b/src/app/app-components/toolbar/toolbar.component.html
@@ -27,7 +27,7 @@
     matTooltipShowDelay="1000"
   >
     <mat-icon
-      [matBadge]="shoppingCartCount$ | async"
+      [matBadge]="shoppingCartCount"
       matBadgeColor="accent"
       matBadgeOverlap="true"
       aria-hidden="false"
